--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1048,3 +1048,19 @@ section {
 #footer .credits {
   font-size: 13px;
 }
+
+/* Custom CSS */
+.myCv{
+  width: 100%;
+  display: block;
+  box-shadow: 3px 3px 15px rgba(6, 120, 227,0.25) inset;
+  text-align: center;
+  border-radius: 15px;
+  cursor: pointer;
+  transition: all 0.5s ease-in;
+}
+
+.myCv:hover, .myCv:focus{
+  transform: scale(1.01);
+  outline: hidden !important;
+}
